--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/node": "^22.0.0"
   },
   "files": ["dist"],
+  "homepage": "https://prior.cg3.io",
   "engines": {
     "node": ">=18"
   }
