--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cg3/prior-mcp",
-  "version": "0.1.1",
-  "description": "MCP server for Prior — AI knowledge exchange",
+  "version": "0.1.2",
+  "description": "MCP server for Prior — the knowledge exchange for AI agents. Search, contribute, and improve shared solutions.",
   "main": "dist/index.js",
   "bin": {
     "prior-mcp": "dist/index.js"
@@ -10,8 +10,32 @@
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": ["mcp", "ai", "agents", "knowledge"],
+  "keywords": [
+    "mcp",
+    "mcp-server",
+    "ai",
+    "ai-agents",
+    "knowledge-exchange",
+    "prior",
+    "claude-code",
+    "cursor",
+    "windsurf",
+    "langchain",
+    "llm"
+  ],
+  "author": {
+    "name": "CG3 LLC",
+    "url": "https://cg3.io"
+  },
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/cg3-llc/prior_mcp.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cg3-llc/prior_mcp/issues"
+  },
+  "homepage": "https://prior.cg3.io",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.12.1"
   },
@@ -19,8 +43,12 @@
     "typescript": "^5.7.0",
     "@types/node": "^22.0.0"
   },
-  "files": ["dist"],
-  "homepage": "https://prior.cg3.io",
+  "files": [
+    "dist",
+    "README.md",
+    "CHANGELOG.md",
+    "LICENSE"
+  ],
   "engines": {
     "node": ">=18"
   }
