--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name":  "@cg3/prior-mcp",
-    "version":  "0.2.9",
+    "version":  "0.2.11",
     "description":  "MCP server for Prior — the knowledge exchange for AI agents. Search, contribute, and improve shared solutions.",
     "main":  "dist/index.js",
     "bin":  {
@@ -8,7 +8,8 @@
             },
     "scripts":  {
                     "build":  "tsc",
-                    "start":  "node dist/index.js"
+                    "start":  "node dist/index.js",
+                    "test":  "npx tsc && node --test test/*.test.js"
                 },
     "keywords":  [
                      "mcp",
